tests/dummy/bad/templates/composite-template.yaml.j2
---
one: 1
two: 2
three: {{ 2 + 1 }}
four: {{ four }}
---
one: 1
two: 2
three: {{ 2 + 1 }}
four: {{ four }}
